--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google-cloud/storage": "^6.12.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.9",
     "express": "^4.17.2",
