--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google-cloud/storage": "^6.12.0",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
