--- a/src/docs/Cart/cart.yaml
+++ b/src/docs/Cart/cart.yaml
@@ -72,6 +72,8 @@ paths:
           in: path
           description: ID of cartItem.
           required: true
+          schema:
+            type: string
       produces:
         - application/json
       responses:
@@ -88,6 +90,13 @@ paths:
         - Cart
       summary: Update quantity of cartItem.
       operationId: putCartItemById
+      parameters:
+        - name: id
+          in: path
+          description: ID of cartItem that needs to be updated.
+          required: true
+          schema:
+            type: string
       requestBody:
         description: Update quantity of cartItem by ID.
         content:
@@ -99,11 +108,6 @@ paths:
                   description: quantity for the item, must be greater than 0 and less than a 100.
                   example: 1
       required: true
-      parameters:
-        - name: id
-          in: path
-          description: ID of cartItem that needs to be updated.
-          required: true
       produces:
         - application/json
       responses:
@@ -127,6 +131,8 @@ paths:
           in: path
           description: ID of cartUItem that needs to be deleted.
           required: true
+          schema:
+            type: string
       produces:
         - application/json
       responses:
