--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 /logs
-/src/config/keys.json
 /.husky
 /.idea/
